adds input field and submit button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <header>
       <h1 class="todoHeader"> To Do Or Not To Do </h1>
     </header>
+    <div>
+      <div class="addTodoInputWrapper">
+        <input type="text" class="newTodoInput" placeholder="Need to do...."><button type="submit" class="btn btn-default">Add</button>
+      </div>
+    </div>
 
   </body>
 </html>
