first section of basic bootstrap table created

--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
         <input type="text" class="newTodoInput" placeholder="Need to do...."><button type="submit" class="btn btn-default">Add</button>
       </div>
     </div>
+    <div class="table table-responsive">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">Name</th>
+            <th scope="col">Topic</th>
+            <th scope="col">Due Date</th>
+            <th scope="col">Completed?</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row"><input id="checkbox" type="checkbox" checked="checked"></th>
+            <td>Adrianna</td>
+            <td>Clean room</td>
+            <td>11/12/2017</td>
+            <td>True</td>
+          </tr>
 
   </body>
 </html>
