completes table with static html content, imports google font for header and styles header

--- a/index.html
+++ b/index.html
@@ -35,6 +35,36 @@
             <td>11/12/2017</td>
             <td>True</td>
           </tr>
-
+          <tr>
+            <th scope="row"><input id="checkbox" type="checkbox"></th>
+            <td>Sam</td>
+            <td>Walk the dog</td>
+            <td>11/15/2017</td>
+            <td>False</td>
+          </tr>
+          <tr>
+            <th scope="row"><input id="checkbox" type="checkbox"></th>
+            <td>Beth</td>
+            <td>Pick uo groceries</td>
+            <td>11/20/2017</td>
+            <td>False</td>
+          </tr>
+          <tr>
+            <th scope="row"><input id="checkbox" type="checkbox" checked="checked"></th>
+            <td>Odin the dog</td>
+            <td>Chase ball</td>
+            <td>10/02/2017</td>
+            <td>True</td>
+          </tr>
+          <tr>
+            <th scope="row"><input id="checkbox" type="checkbox"></th>
+            <td>Nick</td>
+            <td>Work on book report</td>
+            <td>11/18/2017</td>
+            <td>False</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
