fixed spelling error on readme and table

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <tr>
             <th scope="row"><input id="checkbox" type="checkbox"></th>
             <td>Beth</td>
-            <td>Pick uo groceries</td>
+            <td>Pick up groceries</td>
             <td>11/20/2017</td>
             <td>False</td>
           </tr>
